--- a/Frfun7/Frfun7.rc
+++ b/Frfun7/Frfun7.rc
@@ -1,12 +1,12 @@
 #include <windows.h>
 
-#define VER_FILEVERSION             0,7,0,0
-#define VER_PRODUCTVERSION          0,7,0,0
+#define VER_FILEVERSION             0,8,0,0
+#define VER_PRODUCTVERSION          0,8,0,0
 #define VER_COMPANYNAME_STR         "Mark FD\0"
 #define VER_FILEDESCRIPTION_STR     "Frfun7 for Avisynth+ and Avisynth with 2.6 API\0"
-#define VER_FILEVERSION_STR         "0.7\0"
+#define VER_FILEVERSION_STR         "0.8\0"
 #define VER_INTERNALNAME_STR        "Frfun7\0"
-#define VER_LEGALCOPYRIGHT_STR      "© 2006, 2021\0"
+#define VER_LEGALCOPYRIGHT_STR      "© 2006, 2021-2022\0"
 #define VER_ORIGINALFILENAME_STR    "Frfun7.dll\0"
 #define VER_PRODUCTNAME_STR         "Frfun7\0"
 #define VER_PRODUCTVERSION_STR      VER_FILEVERSION_STR
